2006-01-03  Joshua Sled  <jsled@asynchronous.org>

	* gnc-sxed-window-ui.xml: Remove unreferenced `TransactionAction`.

	* dialog-sxsincelast.c (sxsld_disposition_changed): change the
	assertion into a simple return-if-fail due to apparent change in
	the calling order in gtk 2.x...

2006-01-03  David Hampton  <hampton@employees.org>

	* src/engine/Transaction.c: When setting the amount of a split,
	don't call gnc_numeric_convert on it if the split isn't assigned
	to an account. This reduces the time spent loading a data file.

	* src/business/business-gnome/glade/invoice.glade: Couple the
	radio buttons in the unpost dialog.

	* src/gnome/top-level.c:
	* src/gnome/dialog-totd.c:
	* src/gnome/glade/totd.glade: Revert the previous change and make
	the totd always float above all other GnuCash windows.

2006-01-02  David Hampton  <hampton@employees.org>

	* src/gnome/dialog-totd.c: Use the component manager to ensure
	there is only one totd dialog at a time.  Don't mark the dialog as
	transient (or type GTK_WINDOW_DIALOG) so that window managers
	won't make it float above all other GnuCash windows.

	* src/engine/Transaction.c: Fix test inverted by commit 12231.

	* src/gnome-utils/Makefile.am
	* src/gnome-utils/gnc-tree-model-example-account.[ch]: Remove
	unused files.

	* src/gnome/glade/account.glade:
	* src/gnome/druid-hierarchy.c: Use a GtkListStore for the example
	account categories instead of layering a custom selection model on
	a custom example account model.  The code is a lot simpler and has
	additional sorting capability. Do some rework on the druid
	layout.

	* src/gnome-utils/gnc-tree-model-selection.[ch]: Correct function
	name.  Add a comment.

2006-01-02  Derek Atkine  <derek@ihtfp.com>

	* src/gnome-utils/gnc-tree-view-account.c:
	* src/gnome/gnc-plugin-page-budget.c:
	  need to #include gkeyfile.h if we don't have glib26.

2006-01-02  David Hampton  <hampton@employees.org>

	* src/gnome-utils/gnc-tree-view.c: Use the right function to hide